middleware/minio/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: minio
  labels:
    app: minio
spec:
  replicas: 1
  selector:
    matchLabels:
      app: minio
  template:
    metadata:
      labels:
        app: minio
    spec:
      containers:
        - name: minio
          image: registry.localtest.me:5001/minio:latest
          ports:
            - containerPort: 9000
            - containerPort: 9001
          imagePullPolicy: Always
          args: [ "server", "/data" ]
          command: [ "/bin/sh", "-c", "minio server /data --console-address :9001" ]
          volumeMounts:
            - name: minio-storage
              mountPath: "/data"
      volumes:
        - name: minio-storage
          persistentVolumeClaim:
            claimName: pvc-minio-data
